# rtk-play

./: bun.lockb  justfile  next.config.mjs  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.code.yml
server/: bun.lockb  justfile  manage.py  package.json  pyproject.toml
server/docker/: docker-compose.services.yml
server/prisma/: schema.prisma
server/prisma/migrations/20240303125501_init/: migration.sql
server/prisma/migrations/20240303154930_init/: migration.sql
server/rtkplay/: api.py  asgi.py  exceptions.py  settings.py  urls.py  wsgi.py
server/rtkplay/health/: api.py  apps.py
server/rtkplay/todos/: apps.py
server/src/: cors.ts  index.ts  types.ts
server/src/decorators/: index.ts
server/src/errors/: index.ts
server/src/health/: index.ts
server/src/health/handlers/: ping.ts
server/src/users/: errors.ts  users.ts
server/src/users/handlers/: login.ts  sign-up.ts
server/src/utils/: envs.ts
src/app/: layout.tsx  page.tsx
src/components/: input.module.css  input.tsx  main-layout.tsx
src/features/todos/: todosSlice.ts
src/features/todos/components/: todo-form.module.css  todo-form.tsx  todo-list.tsx
src/pages/: index.tsx
src/store/: index.ts  provider.tsx
website/: babel.config.js  bun.lockb  components.json  justfile  package.json  tailwind.config.ts
website/src/: constants.ts
website/src/app/: layout.tsx  page.tsx
website/src/components/: input.tsx  main-layout.tsx
website/src/store/: index.ts  provider.tsx
website/src/utils/: local-storage.ts
(+20 files in other folders)
